--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "chat-app",
   "version": "1.0.0",
-  "description": "A real-time chat application with media sharing and voice chat.",
+  "description": "A real-time chat application.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.7.2",
+    "simple-peer": "^9.11.1"
   }
 }
+
