--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "chat-app",
   "version": "1.0.0",
-  "description": "A real-time chat application.",
+  "description": "A real-time chat application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "socket.io": "^4.7.2",
     "simple-peer": "^9.11.1",
-    "socket.io": "^4.7.2"
+    "uuid": "^9.0.1"
   }
 }
+
